# doorbot-discord

./: .gitignore  LICENSE  README.md  discordbot.service  main.py  pyproject.toml  shell.nix
doorbot/: __main__.py
